objects/Resource__c.object
<CustomObject>
    <label>Resource</label>
    <nameField>
        <displayFormat>ResID-{0000}</displayFormat>
        <label>Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date started with consulting company</description>
        <inlineHelpText>Date started with consulting company</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_of_Experience__c</fullName>
        <formula>YEAR(TODAY())    -   YEAR(Start_Date_in_industry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year of Experience</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_in_industry__c</fullName>
        <description>Date started in the field</description>
        <inlineHelpText>Date started in the field</inlineHelpText>
        <label>Start Date in industry</label>
        <type>Date</type>
    </fields>
</CustomObject>